# socket_polo

socket_atividade/client/: Dockerfile  pyproject.toml
socket_atividade/client/client/: __init__.py  client.py
socket_atividade/server/: Dockerfile  pyproject.toml
socket_atividade/server/server/: __init__.py  server.py
