[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["Solon <matheussolon777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.10"

[tool.poetry.scripts]
main = "client.client:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
